--- a/src/main/webapp/css/notice.css
+++ b/src/main/webapp/css/notice.css
@@ -74,8 +74,9 @@ main p.txt2 {
 #under_nav {
     width: 1200px;
     height: 160px;
-    margin: 0 auto;
+    margin: 30px auto;
     text-align: center;
+    margin-bottom: 150px;
 }
 
 #under_nav ul li {
@@ -97,7 +98,6 @@ main p.txt2 {
     background: #030c33;
     border: 0;
 }
-
 
 
 /*카테고리*/
@@ -129,7 +129,6 @@ main p.txt2 {
     margin: 0 25px;
 }
 
-
 #notice_nav ul li .txt span {
     display: inline-block;
     
@@ -141,7 +140,7 @@ main p.txt2 {
 }
 
 #notice_nav ul li.first .txt span {
-    opacity: 1;
+    opacity: 0;
 }
 
 #notice_nav p.bottom_line {
@@ -155,32 +154,20 @@ main p.txt2 {
     left: 115px;
 }
 
-#notice_nav ul li p.txt:hover span {
+#notice_nav ul li .txt:hover span {
     opacity: 1;
 }
-
-
-
 
 
 /*검색라인*/
 #search {
     width: 1200px;
-    margin: 0px auto 50px;
+    margin: 60px auto 30px;
 }
 
-#search p {
-    display: inline-block;
-    vertical-align: middle;
-    
-    font-size: 13px;
-    color: #333;
-    font-family: 'NanumBarunGothic';
-    padding: 0 10px;
-}
-
-#search p.first {
-    padding-left: 110px;
+#search form {
+	text-align: right;
+	margin-right: 115px;
 }
 
 #search select {
@@ -190,16 +177,12 @@ main p.txt2 {
     
     font-size: 12px;
     color: #666;
-    font-family: 'NanumBarunGothic';
     padding-left: 5px;
-    
-    margin-left: 440px;
 }
 
 #search option {
     font-size: 12px;
     color: #666;
-    font-family: 'NanumBarunGothic';
 }
 
 #search input[type="search"] {
@@ -209,7 +192,6 @@ main p.txt2 {
     
     font-size: 12px;
     color: #666;
-    font-family: 'NanumBarunGothic';
     padding-left: 5px;
 }
 
@@ -220,28 +202,15 @@ main p.txt2 {
     
     font-size: 12px;
     color: #fff;
-    font-family: 'NanumBarunGothic';
     
     cursor: pointer;
 }
 
 
-
-
 /*공지*/
 #notice {
     width: 1200px;
-    height: 900px;
     margin: 0px auto;
-}
-
-#notice h2 {
-    font-size: 28px;
-    color: #333;
-    font-family: 'NanumBarunGothic';
-    text-align: center;
-    
-    padding-bottom: 50px;
 }
 
 #notice table {
@@ -274,7 +243,6 @@ main p.txt2 {
     
     font-size: 12px;
     color: #fff;
-    font-family: 'NanumBarunGothic';
     line-height: 31px;
     
     margin: 0 auto;
@@ -286,153 +254,41 @@ main p.txt2 {
     
     font-size: 14px;
     color: #333;
-    font-family: 'NanumBarunGothic';
-}
-
-#notice table tr td.num {
-    font-size: 12px;
-    color: #333;
-    font-family: 'NanumBarunGothic';
 }
 
 #notice table tr td:nth-child(3) {
-    font-size: 10px;
-    color: #333;
-    font-family: 'NanumBarunGothic';
-    
+    font-size: 12px;
     padding-right: 30px;
 }
 
 #notice table td a:hover {
     text-decoration-line: underline;
-}
-
-
-
-/*페이지이동*/
-#notice ul {
-    width: 270px;
-    height: 30px;
-    margin: 50px auto;
-    text-align: center;
-}
-
-#notice ul li a {
-    width: 30px;
-    height: 30px;
-    border: 1px solid #ddd;
-    
-    float: left;
-    
-    font-size: 14px;
-    color: #666;
-    line-height: 30px;
-}
-
-#notice ul li.num a {
-    border: 0;
-    margin: 0 10px;
-}
-
-#notice ul li.left a {
-    border-right: 0;
-}
-
-
-/*공통*/
-/*카피라이트*/
-#wrap_footer {
-    width: 100%;
-    height: 260px;
-    background: #030c33;
-    margin: 0 auto;
-}
-
-footer {
-    width: 1200px;
-    height: 260px;
-    background: #030c33;
-    margin: 0 auto;
-}
-
-footer p.logo {
-    display: inline-block;
-    width: 65px;
-    height: 45px;
-    
-    margin: 70px 0 0 75px; 
-}
-
-footer ul {
-    display: inline-block;
-    vertical-align: top;
-}
-
-footer ul.left {
-    margin-top: 70px;
-    margin-left: 40px;
-}
-
-footer ul.left li {
-    font-size: 13px;
-    color: #999;
-    font-family: 'NanumBarunGothic';
-    line-height: 1.6;
-}
-
-footer ul.left li a {
-    font-size: 13px;
-    color: #999;
-    font-family: 'NanumBarunGothic';
-    line-height: 1.6;
-}
-
-footer ul.left li span {
-    display: inline-block;
-    width: 1px;
-    height: 10px;
-    background: #999;
-    
-    margin: 0 20px;
-}
-
-footer ul.left li:nth-child(2) {
-    padding-top: 20px;
-}
-
-footer ul.left li a:hover {
     font-weight: bold;
 }
 
-footer ul.right {
-    display: inline-block;
-    vertical-align: top;
-    
-    margin: 70px 0 0 180px;
+
+/*페이지네이션 글작성버튼 */
+#pagination {
+	width:1200px;
+	margin: 50px auto;
+	position: relative;
 }
 
-footer ul.right select {
-    width: 265px;
+#pagination ul {
+	justify-content : center;
+}
+
+#pagination button {
+	position: absolute;
+	top: 0;
+	right: 115px;
+	
+	width: 65px;
     height: 35px;
-    border: 1px solid #999;
     background: #030c33;
     
-    font-size: 13px;
-    color: #999;
-    font-family: 'NanumBarunGothic';
-    
-    padding-left: 10px;
-}
-
-footer ul.right li:nth-child(2) p {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-footer ul.right li:nth-child(2) {
-    text-align: right;
-    
-    padding-top: 35px;
+    font-size: 12px;
+    color: #fff;
 }
 
 
