--- a/src/main/webapp/css/nav.css
+++ b/src/main/webapp/css/nav.css
@@ -36,6 +36,10 @@ ul {
     display: inline-block;
     vertical-align: middle;
     margin-bottom: 0;
+    
+    font-size: 12px;
+    color: #666;
+    line-height: 40px;
 }
 
 #myheader p a {
