--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -400,7 +400,7 @@ main p.right {
 
 /*예매하기*/
 #wrap_ticket {
-    width: 100%px;
+    width: 100%;
     height: 215px;
     background: url(../images/ticket_bg.jpg)no-repeat;
     background-size: cover;
