문의답변시 css변경

--- a/src/main/webapp/css/review/reviewList.css
+++ b/src/main/webapp/css/review/reviewList.css
@@ -331,7 +331,44 @@ main p.txt2 {
 }
 
 
+/* qna 목록(관리자) */
+#adminBookList {
+	width: 1200px;
+	margin: 100px auto 0;
+	text-align: center;
+}
 
+#qnaTable tbody td:nth-child(2){
+	width: 600px;
+	text-align: left;
+	padding-left: 50px;
+}
+
+#qnaTable tbody td:nth-child(2) a {
+	text-decoration: none;
+}
+
+#qnaTable p {
+	display: inline-block;
+	margin-bottom:0;
+	
+	border: 1px solid #030c33;
+	border-radius: 25px;
+	color: #030c33;
+	font-size: 12px;
+	padding: 5px 10px;
+}
+
+#qnaTable .qna_status {
+	display: inline-block;
+	margin-bottom:0;
+	
+	background: #030c33;
+	border-radius: 25px;
+	color: #fff;
+	font-size: 12px;
+	padding: 5px 10px;
+}
 
 
 
