--- a/src/main/webapp/css/review/reviewList.css
+++ b/src/main/webapp/css/review/reviewList.css
@@ -298,6 +298,12 @@ main p.txt2 {
 	text-align: center;
 }
 
+#adminBookList h2 {
+    font-size: 30px;
+    text-align: center;
+    margin: 80px 0 30px 0;
+}
+
 #adminBookList table {
     width: 1000px;
     margin: 0 auto;
