--- a/src/main/webapp/css/notice.css
+++ b/src/main/webapp/css/notice.css
@@ -226,8 +226,9 @@ main p.txt2 {
     border-bottom: 1px solid #f0f0f0;
 }
 
-#notice table tr.top {
-    background: #f7f7f7;
+#notice table tr td {
+	font-size: 14px;
+    color: #333;
 }
 
 #notice table tr td:nth-child(1) {
@@ -235,28 +236,16 @@ main p.txt2 {
     text-align: center;
 }
 
-#notice table tr td:nth-child(1) p {
-    width: 50px;
-    height: 30px;
-    background: #030c33;
-    border-radius: 30px;
-    
-    font-size: 12px;
-    color: #fff;
-    line-height: 31px;
-    
-    margin: 0 auto;
-}
-
-#notice table tr td:nth-child(2) a {
+#notice table tr td:nth-child(3) a {
     display: inline-block;
-    width: 750px;
+    width: 600px;
     
     font-size: 14px;
     color: #333;
+    padding-left: 30px;
 }
 
-#notice table tr td:nth-child(3) {
+#notice table tr td:nth-child(4) {
     font-size: 12px;
     padding-right: 30px;
 }
