--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -30,7 +30,7 @@ ul{
     width: 100%;
     height: 260px;
     background: #030c33;
-    margin: 0 auto;
+    margin: 100px auto 0 ;
 }
 
 #myfooter {
